force-app/main/default/objects/ConnectorType__c/ConnectorType__c.object-meta.xml
<CustomObject>
    <label>Connector Type</label>
    <nameField>
        <label>Connector Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connector Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>