force-app/main/default/objects/ConnectorType__c/fields/AuthorizationEndpoint__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationEndpoint__c</fullName>
    <label>Authorization Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>