force-app/main/default/objects/ConnectorType__c/fields/CallbackURL__c.field-meta.xml
<CustomField>
    <fullName>CallbackURL__c</fullName>
    <label>Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>