force-app/main/default/objects/ConnectorType__c/fields/ExtraUrlParameters__c.field-meta.xml
<CustomField>
    <fullName>ExtraUrlParameters__c</fullName>
    <label>Extra Url Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>