force-app/main/default/objects/ConnectorType__c/fields/ScopeRequired__c.field-meta.xml
<CustomField>
    <fullName>ScopeRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Required</label>
    <type>Checkbox</type>
</CustomField>