force-app/main/default/objects/ConnectorType__c/fields/TokenEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpoint__c</fullName>
    <label>Token Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>